# practice-hell

./: .env.example  .gitignore  README.md  alembic.ini  package-lock.json  package.json  plan.md  pyproject.toml  tsconfig.app.json  vite.config.ts
backend/: __init__.py  ai.py  auth.py  config.py  database.py  main.py  models.py  schemas.py  service.py
deploy/: practice-hell.service
frontend/: index.html
frontend/src/: App.test.tsx  App.tsx  MathText.test.tsx  MathText.tsx  api.ts  styles.css  types.ts
migrations/: env.py
migrations/versions/: 0001_initial.py
practice_hell/: __init__.py  asgi.py  config.py  generator.py  main.py  storage.py
problems/: example.yaml  example_number_answer.yaml  example_simple_addition.yaml  example_single_choice_answer.yaml  test-numerical-integrate.yaml
tests/: test_api.py  test_config.py  test_logging.py
